# linux-debug-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/commands/: work-issue.md
.github/workflows/: ci.yml  transport-integration.yml
docs/: client-setup.md  debug-gdb.md  debug-postmortem.md  fedora-libvirt-user-guide.md  installation.md  ppc64le-provider-spike.md  tool-reference.md
docs/adr/: 0001-layer2-layer4-execution-state-gate-split.md  0002-stop-controller-execution-authority-is-the-guard-token.md  0003-layer3-backend-attachment-vs-transport-session-ownership.md  0004-process-identity-is-an-injectable-seam.md  0005-layer4-registry-durability-host-global-json-flock.md  0006-layer4-unified-cancel-epoch-state-machine.md  0007-local-qemu-target-identity-and-snapshot-producer.md  0008-symbols-package.md  0009-introspect-helper-layer.md  0010-introspect-from-vmcore-execution-model.md  0011-introspect-write-mode-enforcement.md  0012-secrets-store-backends-and-redaction.md  0013-session-guard-precondition-teardown-seam.md  0014-ipmi-cipher-suite-policy.md  0015-stop-capable-guard-revoke-retained-as-contract-primitive.md  0016-watchdog-relax-restore-helper.md  0017-symbol-version-lock-gdb-tier.md  0018-break-injection-policy-mapping.md  0019-debug-gdb-mi-tier-decomposition.md  0020-gdb-mi-symbol-resolution-mechanism.md  0021-gdb-mi-phase-c-session-registry-and-execution-state.md  0022-gdb-mi-phase-d-module-symbol-loading.md  0023-gdb-mi-phase-d-rsp-stall-detect-and-report.md  0024-gdb-mi-phase-d-transport-adaptation.md  0025-gdb-mi-prereq-behavioral-primary-gate.md  0026-postmortem-crash-batch-runner.md  0027-postmortem-triage-composition.md  0028-postmortem-check-prereqs-kdump-readiness.md  0029-postmortem-list-dumps-fetch.md  0030-base-config-generation.md  0031-rootfs-image-source-abstraction.md  0032-guest-ip-lease-discovery.md  0033-wait-for-debugger-frozen-boot.md  0034-run-readiness-preflight.md  0035-headless-serial-console-capture.md  0036-gdb-mi-hardware-breakpoints.md  0037-unprivileged-tooling.md  0038-rootfs-build-input-hardening.md  0039-introspect-drgn-provenance-failure-taxonomy.md  README.md
scripts/: build-rootfs.sh  check-setup-deps.sh
src/kdive/: __init__.py  (+7 more)
tests/: _layer4_fakes.py  _secrets_helpers.py  conftest.py  coordination_observers.py  handler_call_helpers.py  test_artifacts.py  test_artifacts_collect_handler.py  test_break_inject.py  test_build_rootfs_validation.py  test_config.py  test_config_overrides.py  test_confine_run_relative.py  test_coordination_admission.py  test_coordination_lease.py  test_coordination_selection.py  test_crash_batch.py  test_crash_capability.py  test_crash_commands.py  test_crash_config.py  test_crash_parsers.py  test_crash_prereq.py  test_crash_request_model.py  test_debug_handlers.py  test_debug_introspect_check_prereqs.py  test_debug_introspect_from_vmcore.py  test_debug_introspect_run.py  test_debug_postmortem_crash.py  test_debug_postmortem_triage.py  test_dependency_pins.py  test_domain.py  test_drgn_introspect_integration.py  test_drgn_probe_integration.py  test_endpoint_safety.py  test_error_taxonomy.py  test_exec_probe.py  test_exec_state_machine.py  test_future_stub_handlers.py  test_gdb_mi_core_ops.py  test_gdb_mi_engine.py  test_gdb_mi_integration.py  (+113 more)
(+506 files in other folders)
