[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-debug-mcp"
version = "0.1.0"
description = "MCP server foundation for Linux kernel build-boot-debug workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9,<2",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
]

[project.scripts]
linux-debug-mcp = "linux_debug_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
