[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-debug-mcp"
version = "0.1.0"
description = "MCP server foundation for Linux kernel build-boot-debug workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9,<2",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "detect-secrets>=1.5,<2",
  "pre-commit>=4.3,<5",
  "ruff>=0.15,<1",
  "ty==0.0.40",
]
test = [
  "hypothesis>=6.153,<7",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7,<8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["src/linux_debug_mcp"]
branch = true

[tool.coverage.report]
exclude_also = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ty.rules]
# Minimal rule overrides — ty defaults are strict enough for the project's hard-gating
# `ci / typecheck` job. Tighten further by adding entries here, not by raising defaults.
unresolved-import = "warn"

[project.scripts]
linux-debug-mcp = "linux_debug_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
